fix: Subject field not growing on mobile

--- a/web/src/features/EmailMarketing/EmailCampaignBuilder/SegmentationBuilder/components/SegmentationFilterGroup/components/SegmentationFilter/components/SegmentationFilterSubject/SegmentationFilterSubject.scss
+++ b/web/src/features/EmailMarketing/EmailCampaignBuilder/SegmentationBuilder/components/SegmentationFilterGroup/components/SegmentationFilter/components/SegmentationFilterSubject/SegmentationFilterSubject.scss
@@ -2,6 +2,7 @@
 
 [aria-label='Filter subject'] {
   position: relative;
+  flex: 1 1 auto;
 
   [aria-label='Icon'] {
     position: absolute;
